syntax = "proto3";

package greet;

option go_package = "greetpb";

message Greeting {
  string fist_name = 1;
  string last_name = 2;
}

// Greet
message GreetRequest { Greeting greeting = 1; }
message GreetResponse { string result = 1; }

// GreetMany
message GreetManyTimesRequest { Greeting greeting = 1; }
message GreetManyTimesResponse { string result = 1; }

// LongGreet
message LongGreetRequest { Greeting greeting = 1; }
message LongGreetResponse { string result = 1; }

// GreetEveryone
message GreetEveryoneRequest { Greeting greeting = 1; }
message GreetEveryoneResponse { string result = 1; }

// GreetWithDeadline
message GreetWithDeadlineRequest { Greeting greeting = 1; }
message GreetWithDeadlineResponse { string result = 1; }

service GreetService {
  // Unary
  rpc Greet(GreetRequest) returns (GreetResponse) {};

  // Server Streaming
  rpc GreetManyTimes(GreetManyTimesRequest)
      returns (stream GreetManyTimesResponse) {}

  // Client Streaminng
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {}

  // Bi-Directional Streaming
  rpc GreetEveryone(stream GreetEveryoneRequest)
      returns (stream GreetEveryoneResponse) {}

  // Unary with Deadline
  rpc GreetWithDeadline(GreetWithDeadlineRequest)
      returns (GreetWithDeadlineResponse) {};
}